FIX: 글 목록 width가 모바일에서 overflow되는 issue

--- a/packages/react-notion-x/styles.css
+++ b/packages/react-notion-x/styles.css
@@ -2791,3 +2791,8 @@ svg.notion-page-icon {
 .notion-collection-view-dropdown-content[data-state='open'] {
   animation-name: slideDownAndFade;
 }
+
+/* 글 목록 width가 모바일에서 overflow되는 issue 수정 */
+.notion-block-1a346171ed574b0a9c1c3f5a29b39919 {
+  width: 100% !important;
+}
